[fix] overflow fixing

--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,6 @@ body {
 	height: 100%;
 	height: 100vh;
 	height: -webkit-fill-available;
-	overflow: hidden;
 	padding: var(--sat) var(--sar) var(--sab) var(--sal);
   background-color: #1E1E1E;
   color: #F3F1F1;
